--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@ ul.task-list li input[type="checkbox"] {
 <h1>Apa itu Fahlevisia</h1>
 <div resource="#fahlevisia" typeof="schema:WebPage">
 <div class="alinea">
-<p><span property="schema:description"><a href="#fahlevisia">Fahlevisia</a> merupakan situs web personal untuk melestarikan manuskrip-manuskrip kami yang telah kami lestarikan dalam bentuk dokumen-dokumen daring seperti artikel, buku catatan, weblog (blog), dan himpunan data. Jadi, para pembaca yang terhormat dapat mengakses dokumen-dokumen ini secara daring. Fahlevisia diambil dari nama belakang pendiri situs web ini, <a href="https://www.fahlevisia.com/mrfahlevi/#me" property="schema:copyrightHolder" resource="https://www.fahlevisia.com/mrfahlevi/#me" typeof="schema:Person">M.R. Fahlevi</a>, yang kemudian digabungkan dengan akhiran sia. Dengan demikian, Fahlevisia artinya situs web repositori personal <a href="https://www.fahlevisia.com/mrfahlevi/#me" property="schema:creator" resource="https://www.fahlevisia.com/mrfahlevi/#me">M.R. Fahlevi</a>. </span></p>
+<p><span property="schema:description"><a href="#fahlevisia">Fahlevisia</a> merupakan situs web personal untuk melestarikan manuskrip-manuskrip kami yang telah kami lestarikan dalam bentuk dokumen-dokumen daring seperti artikel, buku catatan, weblog (blog), dan himpunan data. Jadi, para pembaca yang terhormat dapat mengakses dokumen-dokumen ini secara daring. Fahlevisia diambil dari nama belakang pendiri situs web ini, <a href="./muhammadrezafahlevi.html#me" property="schema:copyrightHolder" resource="https://www.fahlevisia.com/muhammadrezafahlevi.html#me" typeof="schema:Person">M.R. Fahlevi</a>, yang kemudian digabungkan dengan akhiran sia. Dengan demikian, Fahlevisia artinya situs web repositori personal <a href="./muhammadrezafahlevi.html#me" property="schema:creator" resource="https://www.fahlevisia.com/muhammadrezafahlevi.html#me">M.R. Fahlevi</a>. </span></p>
 <p><span class="math inline">\(\qquad\)</span>Kebanyakan dari manuskrip kami (jika tidak semua) berlisensi di bawah <a property="schema:relatedLink" resource="http://creativecommons.org/licenses/by-sa/4.0/" typeof="schema:URL" href="http://creativecommons.org/licenses/by-nc-sa/4.0/?ref=chooser-v1" target="_blank"><i>Attribution-NonCommercial-ShareAlike 4.0 International</i></a> (Atribusi-NonKomersial-BerbagiSerupa 4.0 Internasional). Kami berusaha sebaik mungkin untuk melestarikan manuskrip-manuskrip kami dapat dipahami baik oleh pembaca yang terhormat maupun mesin (<em>machine readable</em>). Agar dokumen-dokumen ini dapat dibaca oleh mesin, kami menggunakan teknologi <a property="schema:relatedLink" resource="https://en.wikipedia.org/wiki/Semantic_Web" typeof="schema:URL" href="https://en.wikipedia.org/wiki/Semantic_Web" target="_blank">Web Semantik (Semantic Web, Web 3.0, sekarang lebih dikenal dengan istilah <em>web of data</em>)</a> berikut:</p>
 <ul>
 <li><p>
@@ -265,7 +265,7 @@ ul.task-list li input[type="checkbox"] {
     <div>Fahlevisia</div>
     <div>Repositori Digital Personal</div><br>
     <div>Do you like what you have read?<br>You may treat the author a cup of coffee as a form of thank you</div>
-    <a href="https://sociabuzz.com/fahlevisia/tribe#user-image-section" target="_blank">
+    <a href="https://sociabuzz.com/fahlevisia/support" target="_blank">
         <button class="btn-to-SociaBuzz"><i class="bi bi-cup-hot"></i> Treate the author a cup of coffee</button>
     </a>
     <div><i>Fahlevisia is thanked to the honourable reader who support us and/or dedicate some of his/her time reading our article.</i></div>
@@ -296,7 +296,7 @@ ul.task-list li input[type="checkbox"] {
 			<img src="https://www.fahlevisia.com/www/fahlevisiaicon.png" height="15%" width="15%" alt="Fahlevisia"><br>
 			<img src="https://raw.githubusercontent.com/m-RezaFahlevi/m-RezaFahlevi.github.io/main/www/fahlevisiawhite.svg" alt="fahlevisia_repositori" style="margin-left:-0.8pc;">
 		</a>
-		<p style="color: white; font-size:1.5pc;">© <span id="cpRight"></span> by <a href="https://www.fahlevisia.com/mrfahlevi/">Muhammad Reza Fahlevi</a></p>
+		<p style="color: white; font-size:1.5pc;">© <span id="cpRight"></span> by <a href="https://www.fahlevisia.com/mrfahlevi/#me">Muhammad Reza Fahlevi</a></p>
 		<script>
 			obtCopyRightYear() // obtain copy right year
 
