--- a/paper/index.html
+++ b/paper/index.html
@@ -188,7 +188,7 @@ ul.task-list li input[type="checkbox"] {
 <!-- margin-sidebar -->
     <div id="quarto-margin-sidebar" class="sidebar margin-sidebar">
         
-    <h5 class="quarto-listing-category-title">Categories</h5><div class="quarto-listing-category category-default"><div class="category" data-category="">All <span class="quarto-category-count">(5)</span></div><div class="category" data-category="Bahasa Indonesia">Bahasa Indonesia <span class="quarto-category-count">(2)</span></div><div class="category" data-category="C++">C++ <span class="quarto-category-count">(3)</span></div><div class="category" data-category="Filsafat">Filsafat <span class="quarto-category-count">(1)</span></div><div class="category" data-category="Ikhtisar">Ikhtisar <span class="quarto-category-count">(1)</span></div><div class="category" data-category="Ilmu">Ilmu <span class="quarto-category-count">(1)</span></div><div class="category" data-category="Islam">Islam <span class="quarto-category-count">(1)</span></div><div class="category" data-category="Linear Algebra">Linear Algebra <span class="quarto-category-count">(3)</span></div><div class="category" data-category="Matrix">Matrix <span class="quarto-category-count">(2)</span></div><div class="category" data-category="Pengembangan Diri">Pengembangan Diri <span class="quarto-category-count">(1)</span></div><div class="category" data-category="Tools">Tools <span class="quarto-category-count">(3)</span></div><div class="category" data-category="Vectors">Vectors <span class="quarto-category-count">(3)</span></div></div></div>
+    <h5 class="quarto-listing-category-title">Categories</h5><div class="quarto-listing-category category-default"><div class="category" data-category="">All <span class="quarto-category-count">(6)</span></div><div class="category" data-category="Bahasa Indonesia">Bahasa Indonesia <span class="quarto-category-count">(3)</span></div><div class="category" data-category="C++">C++ <span class="quarto-category-count">(3)</span></div><div class="category" data-category="Filsafat">Filsafat <span class="quarto-category-count">(2)</span></div><div class="category" data-category="Ikhtisar">Ikhtisar <span class="quarto-category-count">(1)</span></div><div class="category" data-category="Ilmu">Ilmu <span class="quarto-category-count">(1)</span></div><div class="category" data-category="Islam">Islam <span class="quarto-category-count">(1)</span></div><div class="category" data-category="Linear Algebra">Linear Algebra <span class="quarto-category-count">(3)</span></div><div class="category" data-category="Matrix">Matrix <span class="quarto-category-count">(2)</span></div><div class="category" data-category="Pengembangan Diri">Pengembangan Diri <span class="quarto-category-count">(1)</span></div><div class="category" data-category="Tools">Tools <span class="quarto-category-count">(3)</span></div><div class="category" data-category="Vectors">Vectors <span class="quarto-category-count">(3)</span></div><div class="category" data-category="Yahudi">Yahudi <span class="quarto-category-count">(1)</span></div></div></div>
 <!-- main -->
 <main class="content quarto-banner-title-block column-page-left" id="quarto-document-content">
 
@@ -204,7 +204,54 @@ ul.task-list li input[type="checkbox"] {
 
 <div class="quarto-listing quarto-listing-container-default" id="listing-listing">
 <div class="list quarto-listing-default">
-<div class="quarto-post image-right" data-index="0" data-categories="Bahasa Indonesia,Pengembangan Diri,Filsafat" data-listing-date-sort="1718816400000" data-listing-file-modified-sort="1718895916819" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="13">
+<div class="quarto-post image-right" data-index="0" data-categories="Bahasa Indonesia,Yahudi,Filsafat" data-listing-date-sort="1720890000000" data-listing-file-modified-sort="1720962166441" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="16">
+<div class="thumbnail">
+<p><a href="../paper/2024/fsr6/index.html"> <img src="../paper/2024/fsr6/www/thumbnail.png" class="thumbnail-image"> </a></p>
+</div>
+<div class="body">
+<a href="../paper/2024/fsr6/index.html">
+<h3 class="no-anchor listing-title">
+Mengulas Buku "Yahudi; Mengapa Mereka Berprestasi" yang Ditulis oleh alm. K.H. Toto Tasmara
+</h3>
+<div class="listing-subtitle">
+Disertai Ikhtisar dan Data yang Ada pada Buku
+</div>
+</a>
+<div class="listing-categories">
+<div class="listing-category" onclick="window.quartoListingCategory('Bahasa Indonesia'); return false;">
+Bahasa Indonesia
+</div>
+<div class="listing-category" onclick="window.quartoListingCategory('Yahudi'); return false;">
+Yahudi
+</div>
+<div class="listing-category" onclick="window.quartoListingCategory('Filsafat'); return false;">
+Filsafat
+</div>
+</div>
+<a href="../paper/2024/fsr6/index.html">
+<div class="listing-description">
+<p class="alinea" style="font-size: 15px;">
+Pada dekade ini, dunia dihebohkan dengan berita-berita yang berkaitan dengan umat Yahudi. Baik berita itu mengenai dunia ilmu pengetahuan, teknologi informasi, politik, bahkan dunia yang dimaksud adalah bagian belahan bumi itu sendiri, yaitu "negara Israel" yang menjajah negara Palestina. Dengan apa yang terjadi di dunia belakangan ini, membuat seolah-olah abad ini adalah abad yang kebanyakan diwarnai oleh umat Yahudi, meskipun dari segi jumlah umat, dibandingkan umat Islam atau Kristen, mereka adalah minoritas. Pada tulisan ini, kami mengulas salah satu buku yang membahas alasan mengapa umat Yahudi yang minoritas ini, mampu untuk mewarnai dunia dengan prestasinya yang begitu monumental. Adapun buku yang kami maksud adalah buku yang ditulis oleh alm. K.H. Toto Tasmara, "Yahudi; Mengapa Mereka Berprestasi." Pada tulisan ini, kami memaparkan hal ihwal mengenai buku, penunjuk/ikhtisar buku, dan penunjuk halaman yang mana suatu data dipaparkan.
+</p>
+</div>
+</a>
+</div>
+<div class="metadata">
+<a href="../paper/2024/fsr6/index.html">
+<div class="listing-date">
+Jul 14, 2024
+</div>
+<div class="listing-author">
+Muhammad Reza Fahlevi <svg aria-label="Verified" class="x1lliihq x1n2onr6" fill="rgb(0, 149, 246)" height="18" role="img" viewbox="0 0 40 40" width="18">
+<title>
+Verified
+</title>
+<path d="M19.998 3.094 14.638 0l-2.972 5.15H5.432v6.354L0 14.64 3.094 20 0 25.359l5.432 3.137v5.905h5.975L14.638 40l5.36-3.094L25.358 40l3.232-5.6h6.162v-6.01L40 25.359 36.905 20 40 14.641l-5.248-3.03v-6.46h-6.419L25.358 0l-5.36 3.094Zm7.415 11.225 2.254 2.287-11.43 11.5-6.835-6.93 2.244-2.258 4.587 4.581 9.18-9.18Z" fill-rule="evenodd"></path></svg>
+</div>
+</a>
+</div>
+</div>
+<div class="quarto-post image-right" data-index="1" data-categories="Bahasa Indonesia,Pengembangan Diri,Filsafat" data-listing-date-sort="1718816400000" data-listing-file-modified-sort="1718895916819" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="13">
 <div class="thumbnail">
 <p><a href="../paper/2024/fsr5/index.html"> <img src="../paper/2024/fsr5/www/thumbnail.png" class="thumbnail-image"> </a></p>
 </div>
@@ -251,7 +298,7 @@ Verified
 </a>
 </div>
 </div>
-<div class="quarto-post image-right" data-index="1" data-categories="Islam,Ilmu,Ikhtisar,Bahasa Indonesia" data-listing-date-sort="1717347600000" data-listing-file-modified-sort="1717383034574" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="18">
+<div class="quarto-post image-right" data-index="2" data-categories="Islam,Ilmu,Ikhtisar,Bahasa Indonesia" data-listing-date-sort="1717347600000" data-listing-file-modified-sort="1717383034574" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="18">
 <div class="thumbnail">
 <p><a href="../paper/2024/fsr4/index.html"> <img src="../paper/2024/fsr4/www/thumbnail.jpeg" class="thumbnail-image"> </a></p>
 </div>
@@ -301,7 +348,7 @@ Verified
 </a>
 </div>
 </div>
-<div class="quarto-post image-right" data-index="2" data-categories="C++,Linear Algebra,Matrix,Tools,Vectors" data-listing-date-sort="1714237200000" data-listing-file-modified-sort="1714299430561" data-listing-date-modified-sort="1714237200000" data-listing-reading-time-sort="28">
+<div class="quarto-post image-right" data-index="3" data-categories="C++,Linear Algebra,Matrix,Tools,Vectors" data-listing-date-sort="1714237200000" data-listing-file-modified-sort="1714299430561" data-listing-date-modified-sort="1714237200000" data-listing-reading-time-sort="28">
 <div class="thumbnail">
 <p><a href="../paper/2024/fsr3/index.html"> <img src="../paper/2024/fsr3/www/compfile_bat.png" class="thumbnail-image"> </a></p>
 </div>
@@ -354,7 +401,7 @@ Verified
 </a>
 </div>
 </div>
-<div class="quarto-post image-right" data-index="3" data-categories="C++,Linear Algebra,Matrix,Tools,Vectors" data-listing-date-sort="1712422800000" data-listing-file-modified-sort="1714233615707" data-listing-date-modified-sort="1714150800000" data-listing-reading-time-sort="23">
+<div class="quarto-post image-right" data-index="4" data-categories="C++,Linear Algebra,Matrix,Tools,Vectors" data-listing-date-sort="1712422800000" data-listing-file-modified-sort="1714233615707" data-listing-date-modified-sort="1714150800000" data-listing-reading-time-sort="23">
 <div class="thumbnail">
 <p><a href="../paper/2024/fsr2/index.html"> <img src="../paper/2024/fsr2/thumbnail.png" class="thumbnail-image"> </a></p>
 </div>
@@ -407,7 +454,7 @@ Verified
 </a>
 </div>
 </div>
-<div class="quarto-post image-right" data-index="4" data-categories="C++,Linear Algebra,Tools,Vectors" data-listing-date-sort="1707670800000" data-listing-file-modified-sort="1714235491694" data-listing-date-modified-sort="1714237200000" data-listing-reading-time-sort="34">
+<div class="quarto-post image-right" data-index="5" data-categories="C++,Linear Algebra,Tools,Vectors" data-listing-date-sort="1707670800000" data-listing-file-modified-sort="1714235491694" data-listing-date-modified-sort="1714237200000" data-listing-reading-time-sort="34">
 <div class="thumbnail">
 <p><a href="../paper/2024/fsr1/index.html"> <img src="../paper/2024/fsr1/thumbnail.png" class="thumbnail-image"> </a></p>
 </div>
