--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@ ul.task-list li input[type="checkbox"] {
 <section id="dukung-fahlevisia" class="level1">
 <h1>Dukung Fahlevisia</h1>
 <div class="sociabuzz-fahlevisia-tribe">
-    <img alt="FahlevisiaIcon" src="https://www.fahlevisia.com/www/fahlevisiaicon.png" width="144" height="144" style="border-radius: 100%; margin-top: 3%; margin-bottom: 1%;">
+    <img alt="FahlevisiaIcon" src="https://www.fahlevisia.com/www/fahlevisiaicon.png" width="144" height="144" style="margin-top: 3%; margin-bottom: 1%;">
     <div>Fahlevisia</div>
     <div>Repositori Digital Personal</div><br>
     <div>Do you like what you have read?<br>You may treat the author a cup of coffee as a form of thank you</div>
