--- a/mrfahlevi/index.html
+++ b/mrfahlevi/index.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Muhammad Reza Fahlevi</title>
 	<link rel="stylesheet" href="style.css">
-	<link rel="shortcut icon" href="www/fahlevisiaicon.png" type="image/x-icon">
+	<link rel="shortcut icon" href="https://www.fahlevisia.com/www/fahlevisia_bg.png" type="image/x-icon">
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
 	<meta property="og:title" content="Muhammad Reza Fahlevi">
