--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@ ul.task-list li input[type="checkbox"] {
 <link rel="stylesheet" href="styles.css">
 <meta property="og:title" content="Fahlevisia">
 <meta property="og:description" content="Fahlevisia merupakan situs web personal untuk melestarikan manuskrip-manuskrip kami yang telah kami lestarikan dalam bentuk dokumen-dokumen daring seperti artikel, buku catatan, weblog (blog), dan himpunan data. Jadi, para pembaca yang terhormat dapat mengakses dokumen-dokumen ini secara daring. Fahlevisia diambil dari nama belakang pendiri situs web ini, M.R. Fahlevi, yang kemudian digabungkan dengan akhiran sia. Dengan demikian, Fahlevisia artinya situs web repositori personal M.R. Fahlevi.">
-<meta property="og:image" content="https://www.fahlevisia.com/www/fahlevisia_bg.png">
+<meta property="og:image" content="https://www.fahlevisia.com/www/fahlevisiaicon.png">
 <meta property="og:locale" content="id_ID">
 </head>
 
