--- a/hukum.html
+++ b/hukum.html
@@ -112,14 +112,14 @@ ul.task-list li input[type="checkbox"] {
  <span class="menu-text">Beranda</span></a>
   </li>  
   <li class="nav-item">
-    <a class="nav-link" href="./articles.html" rel="" target=""><i class="bi bi-journal-text" role="img">
+    <a class="nav-link" href="https://www.fahlevisia.com/paper/" rel="" target=""><i class="bi bi-journal-text" role="img">
 </i> 
- <span class="menu-text">Artikel</span></a>
+ <span class="menu-text">Paper</span></a>
   </li>  
   <li class="nav-item">
-    <a class="nav-link" href="./artikelYth.html" rel="" target=""><i class="bi bi-newspaper" role="img">
+    <a class="nav-link" href="https://www.fahlevisia.com/blog/" rel="" target=""><i class="bi bi-newspaper" role="img">
 </i> 
- <span class="menu-text">Artikel Bpk/Ibu Yth.</span></a>
+ <span class="menu-text">Blog</span></a>
   </li>  
 </ul>
             <ul class="navbar-nav navbar-nav-scroll ms-auto">
