--- a/mrfahlevi/index.html
+++ b/mrfahlevi/index.html
@@ -13,6 +13,7 @@
 	<meta property="og:type" content="website">
 	<meta property="og:url" content="https://www.fahlevisia.com/mrfahlevi/">
 	<meta property="og:image" content="https://www.fahlevisia.com/mrfahlevi/www/thumbnail.png">
+	<meta property="og:image:secure_url" content="https://www.fahlevisia.com/mrfahlevi/www/thumbnail.png">
 	<meta property="htpps://ogp.me/ns/profile#first_name" content="Muhammad Reza">
 	<meta property="https://ogp.me/ns/profile#last_name" content="Fahlevi">
 	<meta property="https://ogp.me/ns/propfile#username" content="fahlevisia">
