--- a/mrfahlevi/index.html
+++ b/mrfahlevi/index.html
@@ -246,7 +246,7 @@
 		<p>Skripsi</p>
 		<ul>
 			<li>
-				<span>Mencari Nilai Statistik z, t, <i>Chi Square</i>, dan f secara Heuristik Berdasarkan <i>Dynamic Significance Level</i>.</span>
+				<span>Mencari Nilai Statistik z, t, <i>Chi Square</i>, dan f secara Heuristik Berdasarkan <i>Dynamic Significance Level</i>. Available: <a href="https://repositori.usu.ac.id/handle/123456789/96560">https://repositori.usu.ac.id/handle/123456789/96560</a></span>
 			</li>
 		</ul>
 		<p>Terbit:</p>
