--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ ul.task-list li input[type="checkbox"] {
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/solid.min.css" integrity="sha512-pZlKGs7nEqF4zoG0egeK167l6yovsuL8ap30d07kA5AJUq+WysFlQ02DLXAmN3n0+H3JVz5ni8SJZnrOaYXWBA==" crossorigin="anonymous" referrerpolicy="no-referrer">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
 <script src="https://cdn.jsdelivr.net/npm/ejs@3.1.9/ejs.min.js"></script>
-<link rel="shortcut icon" href="https://www.fahlevisia.com/www/fahlevisiaicon.png" type="image/x-icon">
+<link rel="shortcut icon" href="https://m-rezafahlevi.github.io/www/fahlevisiaicon.png" type="image/x-icon">
 <script>
     MathJax = {
         tex: {
@@ -90,7 +90,7 @@ ul.task-list li input[type="checkbox"] {
 <link rel="stylesheet" href="styles.css">
 <meta property="og:title" content="Fahlevisia">
 <meta property="og:description" content="Fahlevisia merupakan situs web personal untuk melestarikan manuskrip-manuskrip kami yang telah kami lestarikan dalam bentuk dokumen-dokumen daring seperti artikel, buku catatan, weblog (blog), dan himpunan data. Jadi, para pembaca yang terhormat dapat mengakses dokumen-dokumen ini secara daring. Fahlevisia diambil dari nama belakang pendiri situs web ini, M.R. Fahlevi, yang kemudian digabungkan dengan akhiran sia. Dengan demikian, Fahlevisia artinya situs web repositori personal M.R. Fahlevi.">
-<meta property="og:image" content="https://www.fahlevisia.com/www/fahlevisiaicon.png">
+<meta property="og:image" content="https://m-rezafahlevi.github.io/www/fahlevisiaicon.png">
 <meta property="og:locale" content="id_ID">
 </head>
 
@@ -210,7 +210,7 @@ ul.task-list li input[type="checkbox"] {
 <h1>Apa itu Fahlevisia</h1>
 <div resource="#fahlevisia" typeof="schema:WebPage">
 <div class="alinea">
-<p><span property="schema:description"><a href="#fahlevisia">Fahlevisia</a> merupakan situs web personal untuk melestarikan manuskrip-manuskrip kami yang telah kami lestarikan dalam bentuk dokumen-dokumen daring seperti artikel, buku catatan, weblog (blog), dan himpunan data. Jadi, para pembaca yang terhormat dapat mengakses dokumen-dokumen ini secara daring. Fahlevisia diambil dari nama belakang pendiri situs web ini, <a href="./muhammadrezafahlevi.html#me" property="schema:copyrightHolder" resource="https://www.fahlevisia.com/muhammadrezafahlevi.html#me" typeof="schema:Person">M.R. Fahlevi</a>, yang kemudian digabungkan dengan akhiran sia. Dengan demikian, Fahlevisia artinya situs web repositori personal <a href="./muhammadrezafahlevi.html#me" property="schema:creator" resource="https://www.fahlevisia.com/muhammadrezafahlevi.html#me">M.R. Fahlevi</a>. </span></p>
+<p><span property="schema:description"><a href="#fahlevisia">Fahlevisia</a> merupakan situs web personal untuk melestarikan manuskrip-manuskrip kami yang telah kami lestarikan dalam bentuk dokumen-dokumen daring seperti artikel, buku catatan, weblog (blog), dan himpunan data. Jadi, para pembaca yang terhormat dapat mengakses dokumen-dokumen ini secara daring. Fahlevisia diambil dari nama belakang pendiri situs web ini, <a href="./muhammadrezafahlevi.html#me" property="schema:copyrightHolder" resource="https://m-rezafahlevi.github.io/muhammadrezafahlevi.html#me" typeof="schema:Person">M.R. Fahlevi</a>, yang kemudian digabungkan dengan akhiran sia. Dengan demikian, Fahlevisia artinya situs web repositori personal <a href="./muhammadrezafahlevi.html#me" property="schema:creator" resource="https://m-rezafahlevi.github.io/muhammadrezafahlevi.html#me">M.R. Fahlevi</a>. </span></p>
 <p><span class="math inline">\(\qquad\)</span>Kebanyakan dari manuskrip kami (jika tidak semua) berlisensi di bawah <a property="schema:relatedLink" resource="http://creativecommons.org/licenses/by-sa/4.0/" typeof="schema:URL" href="http://creativecommons.org/licenses/by-nc-sa/4.0/?ref=chooser-v1" target="_blank"><i>Attribution-NonCommercial-ShareAlike 4.0 International</i></a> (Atribusi-NonKomersial-BerbagiSerupa 4.0 Internasional). Kami berusaha sebaik mungkin untuk melestarikan manuskrip-manuskrip kami dapat dipahami baik oleh pembaca yang terhormat maupun mesin (<em>machine readable</em>). Agar dokumen-dokumen ini dapat dibaca oleh mesin, kami menggunakan teknologi <a property="schema:relatedLink" resource="https://en.wikipedia.org/wiki/Semantic_Web" typeof="schema:URL" href="https://en.wikipedia.org/wiki/Semantic_Web" target="_blank">Web Semantik (Semantic Web, Web 3.0, sekarang lebih dikenal dengan istilah <em>web of data</em>)</a> berikut:</p>
 <ul>
 <li><p>
@@ -279,10 +279,10 @@ ul.task-list li input[type="checkbox"] {
 		padding-left:3pc;
 		font-size: 3pc;">
 		<a href="https://www.fahlevisia.com">
-			<img src="https://www.fahlevisia.com/www/fahlevisiaicon.png" height="15%" width="15%" alt="Fahlevisia"><br>
+			<img src="https://m-rezafahlevi.github.io/www/fahlevisiaicon.png" height="15%" width="15%" alt="Fahlevisia"><br>
 			<img src="https://raw.githubusercontent.com/m-RezaFahlevi/m-RezaFahlevi.github.io/main/www/fahlevisiawhite.svg" alt="fahlevisia_repositori" style="margin-left:-0.8pc;">
 		</a>
-		<p style="color: white; font-size:1.5pc;">© <span id="cpRight"></span> by <a href="https://www.fahlevisia.com/mrfahlevi/#me">Muhammad Reza Fahlevi</a></p>
+		<p style="color: white; font-size:1.5pc;">© <span id="cpRight"></span> by <a href="https://m-rezafahlevi.github.io/mrfahlevi/#me">Muhammad Reza Fahlevi</a></p>
 		<script>
 			obtCopyRightYear() // obtain copy right year
 
