--- a/hukum.html
+++ b/hukum.html
@@ -67,7 +67,7 @@ ul.task-list li input[type="checkbox"] {
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/solid.min.css" integrity="sha512-pZlKGs7nEqF4zoG0egeK167l6yovsuL8ap30d07kA5AJUq+WysFlQ02DLXAmN3n0+H3JVz5ni8SJZnrOaYXWBA==" crossorigin="anonymous" referrerpolicy="no-referrer">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
 <script src="https://cdn.jsdelivr.net/npm/ejs@3.1.9/ejs.min.js"></script>
-<link rel="shortcut icon" href="https://www.fahlevisia.com/www/fahlevisiaicon.png" type="image/x-icon">
+<link rel="shortcut icon" href="https://m-rezafahlevi.github.com/www/fahlevisiaicon.png" type="image/x-icon">
 <script>
     MathJax = {
         tex: {
@@ -112,12 +112,12 @@ ul.task-list li input[type="checkbox"] {
  <span class="menu-text">Beranda</span></a>
   </li>  
   <li class="nav-item">
-    <a class="nav-link" href="https://www.fahlevisia.com/paper/" rel="" target=""><i class="bi bi-journal-text" role="img">
+    <a class="nav-link" href="https://m-rezafahlevi.github.com/paper/" rel="" target=""><i class="bi bi-journal-text" role="img">
 </i> 
  <span class="menu-text">Paper</span></a>
   </li>  
   <li class="nav-item">
-    <a class="nav-link" href="https://www.fahlevisia.com/blog/" rel="" target=""><i class="bi bi-newspaper" role="img">
+    <a class="nav-link" href="https://m-rezafahlevi.github.com/blog/" rel="" target=""><i class="bi bi-newspaper" role="img">
 </i> 
  <span class="menu-text">Blog</span></a>
   </li>  
@@ -361,10 +361,10 @@ putusan pengadilan atau penetapan hakim;
 		padding-left:3pc;
 		font-size: 3pc;">
 		<a href="https://www.fahlevisia.com">
-			<img src="https://www.fahlevisia.com/www/fahlevisiaicon.png" height="15%" width="15%" alt="Fahlevisia"><br>
+			<img src="https://m-rezafahlevi.github.com/www/fahlevisiaicon.png" height="15%" width="15%" alt="Fahlevisia"><br>
 			<img src="https://raw.githubusercontent.com/m-RezaFahlevi/m-RezaFahlevi.github.io/main/www/fahlevisiawhite.svg" alt="fahlevisia_repositori" style="margin-left:-0.8pc;">
 		</a>
-		<p style="color: white; font-size:1.5pc;">© <span id="cpRight"></span> by <a href="https://www.fahlevisia.com/mrfahlevi/">Muhammad Reza Fahlevi</a></p>
+		<p style="color: white; font-size:1.5pc;">© <span id="cpRight"></span> by <a href="https://m-rezafahlevi.github.com/mrfahlevi/">Muhammad Reza Fahlevi</a></p>
 		<script>
 			obtCopyRightYear() // obtain copy right year
 
