--- a/yth/index.html
+++ b/yth/index.html
@@ -99,7 +99,7 @@ ul.task-list li input[type="checkbox"] {
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/solid.min.css" integrity="sha512-pZlKGs7nEqF4zoG0egeK167l6yovsuL8ap30d07kA5AJUq+WysFlQ02DLXAmN3n0+H3JVz5ni8SJZnrOaYXWBA==" crossorigin="anonymous" referrerpolicy="no-referrer">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
 <script src="https://cdn.jsdelivr.net/npm/ejs@3.1.9/ejs.min.js"></script>
-<link rel="shortcut icon" href="https://www.fahlevisia.com/www/fahlevisiaicon.png" type="image/x-icon">
+<link rel="shortcut icon" href="https://m-rezafahlevi.github.io/www/fahlevisiaicon.png" type="image/x-icon">
 <script>
     MathJax = {
         tex: {
@@ -128,7 +128,7 @@ ul.task-list li input[type="checkbox"] {
     <nav class="navbar navbar-expand-lg navbar-dark ">
       <div class="navbar-container container-fluid">
       <div class="navbar-brand-container">
-    <a href="https://www.fahlevisia.com/yth/index.html" class="navbar-brand navbar-brand-logo">
+    <a href="https://m-rezafahlevi.github.io/yth/index.html" class="navbar-brand navbar-brand-logo">
     <img src="../www/fahlevisiawhite.svg" alt="" class="navbar-logo">
     </a>
   </div>
@@ -139,7 +139,7 @@ ul.task-list li input[type="checkbox"] {
           <div class="collapse navbar-collapse" id="navbarCollapse">
             <ul class="navbar-nav navbar-nav-scroll me-auto">
   <li class="nav-item">
-    <a class="nav-link" href="https://www.fahlevisia.com/yth/index.html" rel="" target=""><i class="bi bi-house" role="img">
+    <a class="nav-link" href="https://m-rezafahlevi.github.io/yth/index.html" rel="" target=""><i class="bi bi-house" role="img">
 </i> 
  <span class="menu-text">Beranda</span></a>
   </li>  
@@ -257,10 +257,10 @@ No matching items
 		padding-left:3pc;
 		font-size: 3pc;">
 		<a href="https://www.fahlevisia.com">
-			<img src="https://www.fahlevisia.com/www/fahlevisiaicon.png" height="15%" width="15%" alt="Fahlevisia"><br>
+			<img src="https://m-rezafahlevi.github.io/www/fahlevisiaicon.png" height="15%" width="15%" alt="Fahlevisia"><br>
 			<img src="https://raw.githubusercontent.com/m-RezaFahlevi/m-RezaFahlevi.github.io/main/www/fahlevisiawhite.svg" alt="fahlevisia_repositori" style="margin-left:-0.8pc;">
 		</a>
-		<p style="color: white; font-size:1.5pc;">© <span id="cpRight"></span> by <a href="https://www.fahlevisia.com/mrfahlevi/">Muhammad Reza Fahlevi</a></p>
+		<p style="color: white; font-size:1.5pc;">© <span id="cpRight"></span> by <a href="https://m-rezafahlevi.github.io/mrfahlevi/">Muhammad Reza Fahlevi</a></p>
 		<script>
 			obtCopyRightYear() // obtain copy right year
 
