--- a/paper/index.html
+++ b/paper/index.html
@@ -98,7 +98,7 @@ ul.task-list li input[type="checkbox"] {
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/solid.min.css" integrity="sha512-pZlKGs7nEqF4zoG0egeK167l6yovsuL8ap30d07kA5AJUq+WysFlQ02DLXAmN3n0+H3JVz5ni8SJZnrOaYXWBA==" crossorigin="anonymous" referrerpolicy="no-referrer">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
 <script src="https://cdn.jsdelivr.net/npm/ejs@3.1.9/ejs.min.js"></script>
-<link rel="shortcut icon" href="https://www.fahlevisia.com/www/fahlevisiaicon.png" type="image/x-icon">
+<link rel="shortcut icon" href="https://m-rezafahlevi.github.io/www/fahlevisiaicon.png" type="image/x-icon">
 <script>
     MathJax = {
         tex: {
@@ -155,7 +155,7 @@ ul.task-list li input[type="checkbox"] {
 </ul>
             <ul class="navbar-nav navbar-nav-scroll ms-auto">
   <li class="nav-item">
-    <a class="nav-link" href="https://www.fahlevisia.com/mrfahlevi/#me" rel="" target=""><i class="bi bi-info-circle-fill" role="img">
+    <a class="nav-link" href="https://m-rezafahlevi.github.io/mrfahlevi/#me" rel="" target=""><i class="bi bi-info-circle-fill" role="img">
 </i> 
  <span class="menu-text">Tentang</span></a>
   </li>  
@@ -519,10 +519,10 @@ No matching items
 		padding-left:3pc;
 		font-size: 3pc;">
 		<a href="https://www.fahlevisia.com">
-			<img src="https://www.fahlevisia.com/www/fahlevisiaicon.png" height="15%" width="15%" alt="Fahlevisia"><br>
+			<img src="https://m-rezafahlevi.github.io/www/fahlevisiaicon.png" height="15%" width="15%" alt="Fahlevisia"><br>
 			<img src="https://raw.githubusercontent.com/m-RezaFahlevi/m-RezaFahlevi.github.io/main/www/fahlevisiawhite.svg" alt="fahlevisia_repositori" style="margin-left:-0.8pc;">
 		</a>
-		<p style="color: white; font-size:1.5pc;">© <span id="cpRight"></span> by <a href="https://www.fahlevisia.com/mrfahlevi/#me">Muhammad Reza Fahlevi</a></p>
+		<p style="color: white; font-size:1.5pc;">© <span id="cpRight"></span> by <a href="https://m-rezafahlevi.github.io/mrfahlevi/#me">Muhammad Reza Fahlevi</a></p>
 		<script>
 			obtCopyRightYear() // obtain copy right year
 
